--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --palette-1: "#0A2647";
+  --palette-2: "#144272";
+  --palette-3: "#205295";
+  --palette-4: "#2C74B3";
+}
