initiating a new version for my portfolio with theme and language, toggler

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -4,9 +4,10 @@
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
+  @apply text-gray-800 bg-gray-100 dark:text-white dark:bg-gray-800;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
 }
+
